<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_edit_note"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="@string/Edit"
    android:orientation="vertical"
    android:padding="20dip">

    <LinearLayout
        android:id="@+id/edit_note_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/Edit"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:id="@+id/tv_note_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/created_at_location"
            android:lines="2"
            android:layout_marginLeft="5sp"
            android:layout_marginBottom="5sp"
            />

    </LinearLayout>

    <SearchView
        android:id="@+id/search_view_find_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:queryHint="Search for Text"
        android:layout_below="@+id/edit_note_header"
        android:layout_marginTop="0px" />


    <EditText
        android:id="@+id/et_edit_note_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_view_find_text"
        android:layout_marginTop="0px"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="Title:"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/et_edit_note_title"
        android:layout_above="@id/bt_edit_note_create_cancel"
        android:layout_marginTop="15dp"
        android:maxLength="2000"
        android:ems="10"
        android:hint="@string/Body_hint"
        android:gravity="top"
        android:inputType="textMultiLine">

        <EditText
            android:id="@+id/et_edit_note_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/Body_hint"
            android:inputType="textMultiLine"
            android:maxLength="2000"
            android:maxLines="13"
            android:minHeight="50pt" />

    </ScrollView>


    <Button
        android:id="@+id/bt_edit_note_create_save"
        android:layout_width="70pt"
        android:layout_height="20pt"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/Confirm_bt" />

    <Button
        android:id="@+id/bt_edit_note_create_cancel"
        android:layout_width="70pt"
        android:layout_height="20pt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@color/BackgroundGrey"
        android:text="@string/Abort_bt"
        />
</RelativeLayout>